# 100-Dungeons

./: .clangd  .gitattributes  .gitignore  .gitmodules  100-Dungeons.sublime-project  100-Dungeons.sublime-workspace  CMakeLists.txt  README.md  arrays.jai  booleans.jai  bootstraper.c  first.jai  nodemon.json  numer_types.jai  readme.md
.claude/: hookify.keep-engine-running.local.md  settings.json  tutor-guard.sh
.github/workflows/: ci.yml
1dungeon/: AssetLoader.cpp  Game.vcxproj  Game.vcxproj.filters  Systems.cpp
1dungeon/Assets/: dungeon1.yaml  scene.json
Lib/toml/lib/: toml.lib
anitra/src/engine/: engine.cpp
docs/superpowers/plans/: 2026-06-11-dungeon1-hotreload-engine.md
docs/superpowers/specs/: 2026-06-11-dungeon1-hotreload-engine-design.md
dungeon1/: .clang-format  CMakeLists.txt  CMakeSettings.json  README.md  anitra.sublime-project  anitra.sublime-workspace  bootstrap.bat  bootstrap.sh  build.bat  build.c  build.h  build.sh  build_all.bat  build_component_serializer.bat  build_core.bat  build_engine.bat  build_externals.bat  build_main.bat  cmakelists.txt  compile_commands.json  create_file_pair.bat  debug.cap  debug.rdbg  ecs_world_save.toml  env_vars.bat  generate_compile_commands.bat  imgui.ini  install_ninja.bat  kaji.cfg  kansi.cfg  kansi.linux.cfg  mysession.vim  nodemon.json  project.4coder  project.meikyu  reload.bat  reload.sh  run_tests.bat  scene.toml  setup_devenv.bat  (+1 more)
dungeon1/assets/: scene.json  scene.toml
dungeon1/assets/models/static/: player.blend  wall.glb  wall_arched.glb
dungeon1/assets/shaders/: Phong.frag  simple.fs  simple.vs  unlit.frag  unlit.vert
dungeon1/include/: game.h  printLog.h
dungeon1/lib/glad/: glad.lib
dungeon1/lib/imgui-1.90.9/: imgui.lib
dungeon1/lib/ryml/cmake/: c4coreConfigVersion.cmake  c4coreTargets.cmake  rymlTargets.cmake
dungeon1/lib/ryml/lib/: c4core.lib  ryml.lib
dungeon1/src/: camera.h  ecs.h  export.h  game.c  game.h  game_state.h  game_unity.c  gpu.c  gpu.h  main.c  main.cpp  model.c  model.cpp  model.h  pch.h  printLog.h  shaders.c  shaders.h
dungeon1/src/core/: core.cpp  core.h  export.h  loadlibrary.h  loadlibrary_windows.cpp
dungeon1/src/editor/: editor.cpp  editor.h
dungeon1/src/engine/: asset_loader.cpp  asset_loader.h  components.gen.h  components.h  components.toml  componets.cpp  componets.gen.cpp  ecs.cpp  ecs.h  engine.c  engine.cpp  engine.h  generated_code.c  memory.cpp  memory.h  physics.cpp  physics.h  systems.cpp  systems.h
dungeon1/src/generator/: arena.c  arena.h  codegenerator.c  codegenerator.h  components.h  componentserializer.c  test_codegenerator.c
dungeon1/src/shaders/: csg.frag  csg.vert  model.frag  model.vert
dungeon1/tests/: ecs_serialize_tests.cpp  test_main.cpp
dungeonflecs/: .clang-format  CMakeLists.txt  build_editor.bat  compile_commands.json  env_vars.bat  imgui.ini  run.bat  setup_devenv.bat
dungeonflecs/assets/: scene.toml
dungeonflecs/assets/shaders/: unlit.frag
dungeonflecs/lib/glad/: glad.c
dungeonflecs/lib/imgui-1.90.9/: build_imgui.bat
dungeonflecs/lib/printlog/: printLog.h
dungeonflecs/src/: main.cpp
dungeonflecs/src/core/: export.h
dungeonflecs/src/editor/: editor.cpp
dungeonflecs/src/engine/: asset_loader.cpp  asset_loader.h  memory.h  systems.cpp  systems.h
editor/src/: editor.h  editor_unity.c
editor/src/panels/: build_panel.c  inspector.c
engine/: CMakeLists.txt  anitra.sublime-project  build.c  build.h  build_all.bat  build_core.bat  build_externals.bat  compile_commands.json  project.wb  tests.ext
engine/assets/models/static/: wall_archedwindow_gated.glb
engine/include/: printLog.h
engine/lib/fastgltf/lib/: fastgltf.lib
engine/lib/glad/: glad.h
engine/lib/printlog/: printLog.lib
engine/lib/toml/: build_toml.bat  toml.lib
engine/src/: linalg.h
engine/src/abi/: abi_platform.h
engine/src/base/: base_types.h
engine/src/core/: core.cpp  loadlibrary_windows.cpp
engine/src/engine/: ImGuizmo.cpp  asset_loader.cpp  components.h  components.toml  engine.h  engine_unity.c  memory.cpp  memory.h  vendor_impl.c
engine/src/engine/render/: render_sdlgpu.c
engine/src/engine/render/shaders/: ui.vert
engine/src/engine/ui/: ui.c  ui.h
engine/src/generator/: arena.h
engine/src/platform/: runtime_main.c  sdl_main.c  win32_main.c
engine/tests/: test_main.cpp
firstdungeon/: main.cpp
forge/: forge.c
lib/: compile.h  file_watch.c  file_watch.h
lib/include/: arena.h
meikyu/: README.md  bootstrap.bat  bootstrap.sh  build.manifest  cmakelists.txt
meikyu/lib/dodai/: README.md  dodai.h  dodai_posix.c  dodai_video.h  dodai_video_sdl.c  dodai_windows.c
meikyu/lib/henshu/: README.md  henshu.c  henshu.h  henshu_state.h  henshu_ui.c  henshu_ui.h  test.c
meikyu/lib/horu/: README.md  horu.c  horu.h  test.c
meikyu/lib/ito/: ito.h  test.c  test.sh
meikyu/lib/kaji/: README.md  default.profraw  kaji.c  kaji.h  test.c
meikyu/lib/kansi/: .gitignore  README.md  kansi.c  kansi.h  test.c
meikyu/lib/michi/: michi.h  test.c  test.sh
meikyu/lib/mono/: README.md  mono.c  mono.h  mono_state.h  test.c
meikyu/lib/seni/: README.md  arena.c  bench_cache.c  perf.sh  seni.c  seni.h  seni_dump.h  seni_panel.c  seni_registry.h  seni_reload.h  test.bat  test.c  test.sh  test_e2e.c  test_fuzz.c  test_stress.c
meikyu/lib/tsumami/: README.md  test.c  tsumami.c  tsumami.h
meikyu/src/: pch.h
meikyu/src/abi/: abi_gpu.h  abi_platform.h
meikyu/src/editor/: editor.c  editor.h  editor_unity.c
meikyu/src/engine/: theme.h
postponed/: .gitattributes  .gitignore  bootstraper.c  readme.md
postponed/engine/: anitra.sublime-workspace  build.bat  build_component_serializer.bat  build_main.bat  ecs_world_save.toml  install_ninja.bat  run_tests.bat
postponed/forge/: build.sh  forge.c
postponed/lib/: compile.c  file_watch.c
src/: game.c  game.h  main.c  watch.h
src/platform/: windows.c
tutor/: 01-explicit-exports.md  02-file-watcher.md  03-auto-build.md  04-wiring.md  05-shadercross.md  06-roadmap.md  07-reading-order.md  README.md  string-views.md
tutor/.obsidian/: appearance.json  workspace.json
(+85 files in other folders)
